# To-Do-List-Project

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e0372bb1cbb6_create_projects_and_tasks_tables.py
postman/: postman_collection.json  postman_environment.json
todo_app/: __init__.py
todo_app/api/: __init__.py  dependencies.py  main.py  router.py
todo_app/api/controller_schemas/: __init__.py  project_request_schema.py  project_response_schema.py  task_request_schema.py  task_response_schema.py
todo_app/api/controllers/: __init__.py  projects_controller.py  tasks_controller.py
todo_app/cli/: __init__.py  console.py  main_cli.py
todo_app/commands/: __init__.py  autoclose_overdue.py  scheduler.py
todo_app/config/: __init__.py  settings.py
todo_app/core/: project.py
todo_app/db/: base.py  models.py  session.py
todo_app/models/: __init__.py  project.py  task.py
todo_app/repositories/: __init__.py  in_memory_repo.py  project_repository.py  task_repository.py
todo_app/services/: __init__.py  project_service.py  task_service.py
todo_app/storage/: in_memory_repo.py
